# d20_Combat_Tracker

./: CMakeLists.txt  CharAncestryEnums.h  CharClassEnums.h  CharCreationHelperFunctions.cpp  CharCreationHelperFunctions.h  CharSheet.cpp  CharSheet.h  README.md  main.cpp  selectionEnums.cpp
Content/: CharAncestryStructs.h  CharClassStructs.h
Content/Ancestries/: Ancestries.cpp  Ancestries.h  Ancestry.cpp  Ancestry.h  Dwarf.cpp  Dwarf.h  Elf.cpp  Elf.h  Human.cpp  Human.h
Content/CharClasses/: CharClassStructs.h
Creation/: CharCreationHelperFunctions.cpp  CharCreationHelperFunctions.h  CharSheet.h  selectionEnums.h
